# tokenmill

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml
data/: kernel_table.csv  reference_kernels.csv  sample_trace.csv
docs/: architecture.md  cerebras-validation.md  cli.md  cost.md  latency-model.md  optimizations.md  power.md  quantization-validation.md  quantization.md  reports.md  results.md  roadmap.md  topology.md  traces.md  validation.md
examples/: 01_continuous_batch.sh  02_chunked_prefill_under_load.sh  03_tensor_parallelism.sh  04_expert_parallelism_moe.sh  05_disaggregated_prefill_decode.sh  06_speculative_decoding.sh  07_multi_token_prediction.sh  08_trace_replay.sh  09_arrival_rate_sweep.sh  10_b200_blackwell.sh  11_amd_mi300x.sh  12_frontier_kimi_k2.sh  13_google_tpu_v8i.sh  14_groq_lpu.sh  15_power_analysis.sh  16_hgx_rubin_nvl8.sh  README.md
reports/: README.md  dashboard.html  index.html  manifest.json
reports/curated/: accelerator-llama8b-coverage.json  b200-model-coverage.json  dgx-llama70b-comparison.html  dgx-llama70b-comparison.json  dgx-system-precision-coverage.json  frontier-moe-accelerator-coverage.json  frontier-moe-dgx-coverage.json  groq-fit-examples.json  llama70b-fp8-accelerator-coverage.json  llama8b-precision-hardware.html  llama8b-precision-hardware.json
scripts/: fetch_traces.sh  run_examples.sh
src/: lib.rs  main.rs
src/engine/: event.rs  mod.rs  queue.rs  sim.rs
tests/: cost.rs  moe.rs  power.rs  quantization_validation.rs  report_cli.rs  roofline.rs  scale_out_cli.rs  spec_mtp.rs  trace.rs
(+23 files in other folders)
