[package]
name = "inference-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.61", features = ["derive"] }
csv = "1.4.0"
hdrhistogram = "7.5.4"
rand = "0.9.4"
rand_distr = "0.5.1"
rayon = "1.12.0"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
tempfile = "3.27.0"
